# data-eng-course

./: README.md
pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  notebook.ipynb  pipeline.py  pyproject.toml
